iniciada la administración de las reservas

--- a/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
@@ -7,12 +7,8 @@
 
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
 
-            <ui:define name="right">
-                right
-            </ui:define>
-
             <ui:define name="content">
-                content
+                <h1 align="center">Solicitud de reserva de equipo para proyecto académico planificado</h1>
             </ui:define>
 
         </ui:composition>
